# agentic_chat

./: .gitignore  README.md  pyproject.toml
src/agentic_chat/: __init__.py  copilotkit_integration.py  entrypoint.py  main.py
