[project]
name = "agentic_chat"
version = "0.1.0"
description = "agentic_chat using crewAI"
authors = [{ name = "Suhas Deshpande", email = "suhas@copilotkit.ai" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]",
    "ag-ui-crewai==0.1.4a1",
    "litellm",
]

[project.scripts]
kickoff = "agentic_chat.main:kickoff"
run_crew = "agentic_chat.main:kickoff"
plot = "agentic_chat.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
